# avhttp

./: .travis.yml  CMakeLists.txt
doc/: avhttp2.0设计.txt
example/: imagebin.cpp  mini_http_server.cpp  multi_download.cpp
include/avhttp/: async_read_body.hpp  file.hpp  file_upload.hpp  http_server.hpp  http_stream.hpp  interthread_stream.hpp  logging.hpp  multi_download.hpp  settings.hpp
include/avhttp/detail/: http_stream_impl.hpp  http_stream_impl_visitors.hpp  splice_stream.hpp
include/avhttp/impl/: file_upload.ipp  http_stream.ipp
test/: CMakeLists.txt  http_stream_impl_test.cpp
vcprojects/: async_http_stream-vc2012.vcxproj  mini_http_server-2005.sln  mini_http_server-2005.vcproj  mini_http_server-vc2012.vcxproj  multi_download-vc2005.vcproj  multi_download-vc2012.vcxproj  multi_download-vc2012.vcxproj.filters
